--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,12 @@ section {
 /* código omitido */
 
 section {
-  padding-left: 20px;
+ body {
+  color: white;
+  background: black;
+  margin: 0px;
+  font-family: "Chakra Petch", sans-serif;
+  margin-bottom: 100px;
+} padding-left: 20px;
   padding-right: 20px;
 }
